<?xml version="1.0" encoding="ISO-8859-1"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.inra.cepia</groupId>
	<artifactId>Imago</artifactId>
	<version>0.1.3-version</version>

	<name>Imago.jar</name>
	<description>Interactive image processing and analysis</description>
	
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

	<dependencies>
		<!-- Jama (Java Matrix package) is used for computing inertia ellipsoid --> 
		<dependency>
			<groupId>gov.nist.math</groupId>
			<artifactId>jama</artifactId>
			<version>1.0.3</version>
		</dependency>
		
		<!-- Add a dependency to JUnit for unit tests --> 
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>[4.13.1,)</version>
            <scope>test</scope>
	    </dependency>
	
		<!-- GSON for management of JSON files -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.9</version>
		</dependency>
	        
	</dependencies>
    
    
	<build>
		
		<resources>
			<resource>
				<directory>${basedir}/src/main/resources</directory>
			</resource>
			<resource>
				<directory>${project.build.sourceDirectory}</directory>
			</resource>
		</resources>
		
		<testResources>
			<testResource>
				<directory>${basedir}/src/test/resources</directory>
			</testResource>
			<testResource>
				<directory>${project.build.testSourceDirectory}</directory>
			</testResource>
		</testResources>
		
		<plugins>
		</plugins>
		
	</build>

	<developers>
	
		<developer>
			<id>dlegland</id>
			<name>David Legland</name>
			<email>david.legland@inrae.fr</email>
			<organization>INRAE</organization>
			<organizationUrl>https://www6.angers-nantes.inrae.fr/bia/</organizationUrl>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>

	</developers>
	
</project>
